# visio_to_kompas3d_convertor

./: .gitignore  README.md  kompas_builder.py  requirements.txt  tmp.py
cpp_tool/: CMakeLists.txt
cpp_tool/src/: Builder.cpp  Builder.h  Kompas2D.cpp  Kompas2D.h  KompasApp.cpp  KompasApp.h  main.cpp
python_pkg/: main.py
python_pkg/visio_parser/: parser.py
scripts/: open_in_kompas.py  rename.py
src/: convert_batch_visio_to_kompas.py  main.py
src/kompas_builder/: Builder.cpp  Builder.h  Document2D.cpp  Document2D.h  KompasSDK.cpp  KompasSDK.h  builder.py  builder_batch.py  com_init.py  doc_setup.py  drawing.py  dynamic_array_constants.py  kompas2d.py  kompas5Constants.py  kompas_app.py  main.cpp
src/visio_parser/: com_utils.py  parser.py  shape_extractors.py  utils.py
test/: data.json  input.vsd  output.cdw
